--- a/Poke/index.html
+++ b/Poke/index.html
@@ -5,7 +5,13 @@
 	<meta charset="utf-8">
 	<title>Pokemon</title>
 </head>
-<body ng-controller="pokedex" >
+<body ng-controller="Pokedex" >
+
+
+	<div class="cuadro" ng-repeat="poke in PokedexB">
+		<p>{{poke.data.name}}</p>
+		
+	</div>
 
 	<!-- Script AngularJS-->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
